--- a/package.json
+++ b/package.json
@@ -39,7 +39,14 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.18.1",
     "expo": "^33.0.0",
+    "handlebars": "^4.0.14",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.13",
+    "lodash-es": "^4.17.14",
+    "mem": "^4.0.0",
+    "merge": "^1.2.1",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
